[MINOR] Refactoring - boolean constructors, returns, semicolons
1) Boolean constructor creates new Boolean instances, so follow best
practice of using Boolean.TRUE, Boolean.FALSE, and Boolean.valueOf()
rather than the Boolean constructor. See Boolean constructor javadocs
for more information.
2) Remove unnecessary return statements
3) Remove extraneous semicolons